ADD: ログインのsystem_spec (エラーあり) FIX: i18nの修正 FIX: ヘッダーの修正 FIX: 動画登録画面の修正 FIX: バリテーションの修正 FIX: CSSの修正（Boards）

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -12,7 +12,7 @@ ja:
       no_result: '該当動画ありません'
       deleted: "%{item}を削除しました"
       updated: "%{item}を更新しました"
-      no_updated: "%{item}を更新できませんでした"
+      not_updated: "%{item}を更新できませんでした"
       delete_confirm: '削除しますか'
       not_authorized: '権限がありません'
   users:
@@ -23,3 +23,5 @@ ja:
     create:
       success: 'ログインしました'
       fail: 'ログインに失敗しました'
+    destroy:
+      success: ログアウトしました
